--- a/src/app/dashboard/character-selection/config-table/config-table.component.html
+++ b/src/app/dashboard/character-selection/config-table/config-table.component.html
@@ -6,7 +6,7 @@
             </ng-container>
         </div>
         <div class="count">
-            0 / {{ item.count }}
+            {{ getSelectedSymbolCount(item.symbol) }} / {{ item.count }}
         </div>
     </div>
 </div>
