--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -6,16 +6,11 @@
         </ion-buttons>
         <ion-title class="ion-text-center">{{"CharacterAssign.title" | translate}}</ion-title>
     </ion-toolbar>
+    <toolbar-actions [config]="toolbarActionsConfig"></toolbar-actions>
 </ion-header>
 
 <ion-content>
     <ion-grid class="character-assign-grid">
-        <ion-row>
-            <ion-col size="12" class="buttons-container">
-                <ion-button size="small" (click)="manageUsers()">{{ "CharacterAssign.listManage" | translate }}</ion-button>
-                <ion-button size="small" (click)="assignAutomatically()">{{ "CharacterAssign.assignAutomatically" | translate }}</ion-button>
-            </ion-col>
-        </ion-row>
         <ion-row>
             <ion-col size="12">
                 <ion-text color="primary">
