--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -19,9 +19,10 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of townGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers.town">
                         <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="assign-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
@@ -36,9 +37,10 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of mafiaGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers.mafia">
                         <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="assign-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
@@ -53,9 +55,10 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of neutralGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers.neutral">
                         <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="assign-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
@@ -70,9 +73,10 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of civiliansGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers.civilian">
                         <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="assign-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
                         </ion-text>
                     </ion-col>
