--- a/src/app/dashboard/character-assign/user-manage-modal/user-manage.page.html
+++ b/src/app/dashboard/character-assign/user-manage-modal/user-manage.page.html
@@ -33,7 +33,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col size="12">
-                        <ion-input class="name-input bold" [(ngModel)]="userName"
+                        <ion-input class="name-input bold" [(ngModel)]="userName" (keyup.enter)="addUser()"
                             placeholder="{{'CharacterAssign.passName' | translate}}">
                         </ion-input>
                     </ion-col>
