--- a/src/app/dashboard/character-selection/character-selection.page.html
+++ b/src/app/dashboard/character-selection/character-selection.page.html
@@ -127,6 +127,14 @@
         </ion-row>
         <ion-row>
             <ion-col size="12">
+                <ion-item class="item-transparent">
+                    <ion-checkbox color="primary" [(ngModel)]="gameWithNumbers"></ion-checkbox>
+                    <ion-label color="primary" class="ion-margin-start">
+                        {{"CharacterSelection.gameWithNumbers" | translate}}
+                    </ion-label>
+                </ion-item>
+            </ion-col>
+            <ion-col size="12">
                 <ion-button class="bold" (click)="confirmSelection()" [disabled]="!playersSelectedProperly"
                     expand="block" size="large">
                     {{"CharacterSelection.confirm" | translate}}
