--- a/src/app/game/game.page.scss
+++ b/src/app/game/game.page.scss
@@ -1,6 +1,29 @@
 .game-grid {
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    flex-direction: column;
+    margin-top: 1rem;
+    
+    .section-title {
+        position: relative;
+        margin-bottom: 1rem;
+
+        &:after {
+            content: "";
+            position: absolute;
+            height: 10px;
+            bottom: -16px;
+            left: 30%;
+            right: 30%;
+            background-image: url("/assets/img/bottom.png");
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+    }
+
+    .moon-container {
+        width: 100%;
+
+        img {
+            height: 100px;
+        }
+    }
 }
