--- a/src/app/dashboard/character-list/character-list.page.html
+++ b/src/app/dashboard/character-list/character-list.page.html
@@ -16,7 +16,8 @@
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of townGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="list-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
@@ -33,7 +34,8 @@
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of mafiaGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="list-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
@@ -50,7 +52,8 @@
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of neutralGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="list-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
@@ -67,7 +70,8 @@
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of civiliansGamePlayers">
                         <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary">
+                        <ion-text color="primary" class="list-title-container">
+                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title">{{ player.user?.assign_name }}</p>
                         </ion-text>
                     </ion-col>
