--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,5 +8,9 @@
             <ion-icon name="dice"></ion-icon>
             <ion-label>{{"Basic.game" | translate}}</ion-label>
         </ion-tab-button>
+        <ion-tab-button tab="history">
+            <ion-icon name="book"></ion-icon>
+            <ion-label>{{"Basic.history" | translate}}</ion-label>
+        </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
