--- a/src/app/dashboard/character-list/character-list.page.html
+++ b/src/app/dashboard/character-list/character-list.page.html
@@ -14,7 +14,7 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of townGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers?.town">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary" class="list-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
@@ -32,7 +32,7 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of mafiaGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers?.mafia">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary" class="list-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
@@ -50,7 +50,7 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of neutralGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers?.neutral">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary" class="list-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
@@ -68,7 +68,7 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of civiliansGamePlayers">
+                    <ion-col size="6" *ngFor="let player of gamePlayers?.civilian">
                         <player-item [name]="player.name" [selected]="true"></player-item>
                         <ion-text color="primary" class="list-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
