--- a/src/app/dashboard/character-selection/character-selection.page.html
+++ b/src/app/dashboard/character-selection/character-selection.page.html
@@ -19,6 +19,12 @@
             </ion-col>
         </ion-row>
         <ion-row>
+            <ion-col size="12" id="players-count" class="ion-text-center ion-no-padding">
+                <ion-text color="primary">
+                    <span *ngIf="selectedPlayersCount" id="selected-count">{{selectedPlayersCount}} /</span>
+                    <span id="max-count">{{maxPlayersCount}}</span>
+                </ion-text>
+            </ion-col>
             <ion-col size="12">
                 <ion-item class="item-transparent">
                     <ion-range min="7" max="30" [value]="maxPlayersCount" (ionChange)="playersCountChanged($event)">
@@ -26,12 +32,6 @@
                         <ion-icon color="primary" slot="end" name="person-add"></ion-icon>
                     </ion-range>
                 </ion-item>
-            </ion-col>
-            <ion-col size="12" id="players-count" class="ion-text-center">
-                <ion-text color="primary">
-                    <span *ngIf="selectedPlayersCount" id="selected-count">{{selectedPlayersCount}} /</span>
-                    <span id="max-count">{{maxPlayersCount}}</span>
-                </ion-text>
             </ion-col>
         </ion-row>
         <ion-row>
