--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,8 @@
     --ion-color-secondary-shade: #470b0b !important;
     --ion-color-secondary-tint: #801414 !important;
 
+    --ion-color-gray: #bdbdbd !important;
+
     --ion-toolbar-background: #d9a43b !important;
     --ion-toolbar-color: #000000 !important;
 }
