--- a/src/app/dashboard/character-list/character-list.page.html
+++ b/src/app/dashboard/character-list/character-list.page.html
@@ -6,6 +6,12 @@
 
 <ion-content>
     <ion-grid class="character-list-grid">
+        <div class="player-switch" *ngIf="!allPlayersAlive">
+            <ion-checkbox color="primary" [(ngModel)]="showAlive"></ion-checkbox>
+            <ion-label color="primary" class="ion-margin-start">
+                {{"CharacterList.showAlive" | translate}}
+            </ion-label>
+        </div>
         <ion-row>
             <ion-col size="12">
                 <ion-text color="primary">
@@ -14,13 +20,15 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of gamePlayers?.town">
-                        <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary" class="list-title-container">
-                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
-                            <p class="assign-title">{{ player.user?.assign_name }}</p>
-                        </ion-text>
-                    </ion-col>
+                    <ng-container *ngFor="let player of gamePlayers?.town">
+                        <ion-col size="6" *ngIf="!showAlive || (showAlive && player.user?.alive)">
+                            <player-item [gamePlayer]="player" [name]="player.name" [selected]="true"></player-item>
+                            <ion-text class="list-title-container" [class.killed]="!player.user?.alive">
+                                <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
+                                <p class="assign-title">{{ player.user?.assign_name }}</p>
+                            </ion-text>
+                        </ion-col>
+                    </ng-container>
                 </ion-row>
             </ion-col>
         </ion-row>
@@ -32,13 +40,15 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of gamePlayers?.mafia">
-                        <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary" class="list-title-container">
-                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
-                            <p class="assign-title">{{ player.user?.assign_name }}</p>
-                        </ion-text>
-                    </ion-col>
+                    <ng-container *ngFor="let player of gamePlayers?.mafia">
+                        <ion-col size="6" *ngIf="!showAlive || (showAlive && player.user?.alive)">
+                            <player-item [gamePlayer]="player" [name]="player.name" [selected]="true"></player-item>
+                            <ion-text class="list-title-container" [class.killed]="!player.user?.alive">
+                                <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
+                                <p class="assign-title">{{ player.user?.assign_name }}</p>
+                            </ion-text>
+                        </ion-col>
+                    </ng-container>
                 </ion-row>
             </ion-col>
         </ion-row>
@@ -50,13 +60,15 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of gamePlayers?.neutral">
-                        <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary" class="list-title-container">
-                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
-                            <p class="assign-title">{{ player.user?.assign_name }}</p>
-                        </ion-text>
-                    </ion-col>
+                    <ng-container *ngFor="let player of gamePlayers?.neutral">
+                        <ion-col size="6" *ngIf="!showAlive || (showAlive && player.user?.alive)">
+                            <player-item [gamePlayer]="player" [name]="player.name" [selected]="true"></player-item>
+                            <ion-text class="list-title-container" [class.killed]="!player.user?.alive">
+                                <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
+                                <p class="assign-title">{{ player.user?.assign_name }}</p>
+                            </ion-text>
+                        </ion-col>
+                    </ng-container>
                 </ion-row>
             </ion-col>
         </ion-row>
@@ -68,13 +80,15 @@
             </ion-col>
             <ion-col size="12">
                 <ion-row>
-                    <ion-col size="6" *ngFor="let player of gamePlayers?.civilian">
-                        <player-item [name]="player.name" [selected]="true"></player-item>
-                        <ion-text color="primary" class="list-title-container">
-                            <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
-                            <p class="assign-title">{{ player.user?.assign_name }}</p>
-                        </ion-text>
-                    </ion-col>
+                    <ng-container *ngFor="let player of gamePlayers?.civilian">
+                        <ion-col size="6" *ngIf="!showAlive || (showAlive && player.user?.alive)">
+                            <player-item [gamePlayer]="player" [name]="player.name" [selected]="true"></player-item>
+                            <ion-text class="list-title-container" [class.killed]="!player.user?.alive">
+                                <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
+                                <p class="assign-title">{{ player.user?.assign_name }}</p>
+                            </ion-text>
+                        </ion-col>
+                    </ng-container>
                 </ion-row>
             </ion-col>
         </ion-row>
