--- a/src/app/dashboard/character-list/character-list.page.scss
+++ b/src/app/dashboard/character-list/character-list.page.scss
@@ -4,6 +4,15 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        color: var(--ion-color-primary);
+
+        &.killed {
+            color: var(--ion-color-gray);
+
+            .number {
+                border: 1px solid var(--ion-color-gray);
+            }
+        }
 
         .number {
             font-size: .9rem;
@@ -21,5 +30,12 @@
             margin: 0;
             text-align: center;
         }
+    }
+
+    .player-switch {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 1rem;
     }
 }
