--- a/src/app/shared/components/history-item/history-item.component.html
+++ b/src/app/shared/components/history-item/history-item.component.html
@@ -3,8 +3,14 @@
         <ion-col size="3">
             <img [src]="item.type | historyItemImage" [alt]="item.type">
         </ion-col>
-        <ion-col size="9" class="info-container">
-            <ion-text class="message" color="primary">{{ "History." + item.type + "Message" | translate }}</ion-text>
+        <ion-col size="9">
+            <ion-row class="info-container">
+                <ion-col size="12" class="ion-text-center">
+                    <ion-text class="message" color="primary">
+                        {{ item.destinationPlayer ? item.destinationPlayer?.user?.assign_name + ' -> ' : '' }}{{ "History." + item.type + "Message" | translate }}
+                    </ion-text>
+                </ion-col>
+            </ion-row>
         </ion-col>
     </ion-row>
 </div>
