--- a/src/app/shared/components/history-item/history-item.component.scss
+++ b/src/app/shared/components/history-item/history-item.component.scss
@@ -1,7 +1,6 @@
 .history-item-container {
     .info-container {
-        display: flex;
-        justify-content: center;
+        height: 100%;
         align-items: center;
     }
 }
