--- a/src/app/shared/components/player-info-modal/player-info-modal.component.html
+++ b/src/app/shared/components/player-info-modal/player-info-modal.component.html
@@ -13,9 +13,9 @@
 <ion-content>
     <ion-grid class="player-info-modal-grid">
         <ion-row class="ion-justify-content-center">
-            <ion-col size="8">
-                <ion-row>
-                    <ion-col size="12">
+            <ion-col size="12">
+                <ion-row class="ion-justify-content-center">
+                    <ion-col size="8">
                         <ion-segment value="info" [(ngModel)]="segment">
                             <ion-segment-button value="info">
                                 {{"PlayerInfo.info" | translate}}
@@ -27,7 +27,7 @@
                     </ion-col>
 
                     <ng-container [ngSwitch]="segment">
-                        <ion-col size="12" *ngSwitchCase="'info'">
+                        <ion-col size="8" *ngSwitchCase="'info'">
                             <ion-row>
                                 <ion-col size="12" class="image-symbol">
                                     <img [src]="'/assets/img/characters/' + player.name + '.png'">
@@ -46,10 +46,10 @@
                                 </ion-col>
                             </ion-row>
                         </ion-col>
-                        <ion-col size="12" *ngSwitchCase="'action'">
-                            <ion-text color="primary">
-                                TUTAJ BĘDĄ MOŻLIWE DO WYKONANIA AKCJE NP. ZABICIE
-                            </ion-text>
+                        <ion-col size="10" *ngSwitchCase="'action'">
+                            <ion-button class="bold" (click)="kill()" expand="block" size="large">
+                                {{"PlayerInfo.kill" | translate}}
+                            </ion-button>
                         </ion-col>
                     </ng-container>
                 </ion-row>
