--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -19,17 +19,25 @@
             </ion-row>
         </ion-row>
         <ion-row>
-            <ion-col size="12">
-                <ion-button *ngIf="isNight; else startDayButtonTemplate" class="bold" (click)="startDay()"
-                    expand="block" size="large">
-                    {{"Game.startDay" | translate}}
-                </ion-button>
-                <ng-template #startDayButtonTemplate>
+            <ng-container *ngIf="isNight; else dayButtonsTemplate">
+                <ion-col size="12">
+                    <ion-button class="bold" (click)="startDay()" expand="block" size="large">
+                        {{"Game.startDay" | translate}}
+                    </ion-button>
+                </ion-col>
+            </ng-container>
+            <ng-template #dayButtonsTemplate>
+                <ion-col size="12" *ngIf="!game.votingEnded">
+                    <ion-button class="bold" (click)="startVoting()" expand="block" size="large">
+                        {{"Game.startVoting" | translate}}
+                    </ion-button>
+                </ion-col>
+                <ion-col size="12">
                     <ion-button class="bold" (click)="startNight()" expand="block" size="large">
                         {{"Game.startNight" | translate}}
                     </ion-button>
-                </ng-template>
-            </ion-col>
+                </ion-col>
+            </ng-template>
             <ion-col size="12">
                 <ion-button class="bold" (click)="endGame()" expand="block" size="large">
                     {{"Game.endGame" | translate}}
