--- a/src/global.scss
+++ b/src/global.scss
@@ -76,7 +76,7 @@ ion-checkbox {
 }
 
 .center-grid {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
