--- a/src/app/shared/components/toolbar-actions/toolbar-actions.component.html
+++ b/src/app/shared/components/toolbar-actions/toolbar-actions.component.html
@@ -2,7 +2,7 @@
     <ion-icon name="ellipsis-vertical-outline"></ion-icon>
 </span>
 <div class="actions" #actions>
-    <div class="action-item" *ngFor="let item of config" (click)="item.handler()">
+    <div class="action-item" *ngFor="let item of config" (click)="$any(item).handler()">
         {{item.text}}
     </div>
 </div>
