--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -21,7 +21,7 @@
                             </ion-text>
                         </ion-col>
                         <ion-col size="12">
-                            <history-item *ngFor="let item of phase.value" [item]="item"></history-item>
+                            <history-item *ngFor="let item of $any(phase).value" [item]="item"></history-item>
                         </ion-col>
                     </ion-row>
                 </ion-col>
