--- a/src/app/shared/components/player-item/player-item.component.html
+++ b/src/app/shared/components/player-item/player-item.component.html
@@ -1,4 +1,4 @@
-<div class="player-item-container" [class.killed]="gamePlayer && !gamePlayer?.user?.alive" [class.selected]="selected">
+<div [ngClass]="class" class="player-item-container" [class.killed]="gamePlayer && !gamePlayer?.user?.alive" [class.selected]="selected">
     <ion-row>
         <ion-col size="12" class="image-container" (click)="imageClick()">
             <img [src]="'/assets/img/characters/' + name + '.png'">
