--- a/src/app/shared/components/player-item/player-item.component.scss
+++ b/src/app/shared/components/player-item/player-item.component.scss
@@ -1,5 +1,7 @@
 .player-item-container {
-    padding: 1rem;
+    &:not(.ion-no-padding) {
+        padding: 1rem;
+    }
     
     .image-container {
         background-image: url("/assets/img/frame.png");
