--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -20,7 +20,7 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of gamePlayers.town">
-                        <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
+                        <player-item [config]="getPlayerItemConfig(player)"></player-item>
                         <ion-text color="primary" class="assign-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
@@ -38,7 +38,7 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of gamePlayers.mafia">
-                        <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
+                        <player-item [config]="getPlayerItemConfig(player)"></player-item>
                         <ion-text color="primary" class="assign-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
@@ -56,7 +56,7 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of gamePlayers.neutral">
-                        <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
+                        <player-item [config]="getPlayerItemConfig(player)"></player-item>
                         <ion-text color="primary" class="assign-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
@@ -74,7 +74,7 @@
             <ion-col size="12">
                 <ion-row>
                     <ion-col size="6" *ngFor="let player of gamePlayers.townie">
-                        <player-item [name]="player.name" [selected]="!!player.user?.assign_name"></player-item>
+                        <player-item [config]="getPlayerItemConfig(player)"></player-item>
                         <ion-text color="primary" class="assign-title-container">
                             <div class="number" *ngIf="player.user?.number">{{player.user?.number}}</div>
                             <p class="assign-title" (click)="assignPlayer(player)">{{ player.user?.assign_name || ("CharacterAssign.clickToAssign" | translate) }}</p>
