--- a/src/app/shared/components/voting/voting.component.html
+++ b/src/app/shared/components/voting/voting.component.html
@@ -78,8 +78,7 @@
                             class="ion-no-padding">
                             <ion-row>
                                 <ion-col size="3">
-                                    <player-item [name]="player.name" [withLabel]="false" [class]="'ion-no-padding'"
-                                        [selected]="selectedPlayer?.id === player.id"></player-item>
+                                    <player-item [config]="getPlayerItemConfig(player)"></player-item>
                                 </ion-col>
                                 <ion-col size="6" class="assign-title-container">
                                     <ion-text color="primary">
@@ -116,8 +115,7 @@
                     </ion-row>
                     <ion-row class="ion-justify-content-center">
                         <ion-col size="5">
-                            <player-item [name]="selectedPlayer.name" [withLabel]="false" [class]="'ion-no-padding'"
-                                [selected]="true"></player-item>
+                            <player-item [config]="getPlayerItemConfig(selectedPlayer)"></player-item>
                         </ion-col>
                     </ion-row>
                     <ion-row class="ion-justify-content-center">
